Fix OOM error in github actions (for all tests)
- Change restart: "unless-stopped" to "no"

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,56 +1,13 @@
 services:
   postgres:
     container_name: evokstest_postgres
-    image: postgres
     environment:
       POSTGRES_USER: 'postgres'
       POSTGRES_PASSWORD: 'changeme'
-      PGDATA: /data/postgres
-      POSTGRES_DB: dev
-    networks:
-      - postgres
-    restart: unless-stopped
-    healthcheck:
-      test: pg_isready
-      interval: 20s
-      timeout: 10s
-      retries: 5
-      start_period: 2m
-
-  change-vol-ownership:
-    # Fix Ownership of Build Directory
-    # Thanks to Bug in Docker itself
-    # We need to use steps like this
-    # Because by default, the volume directory
-    # Is owned by Root
-    # So this helps correct it
-    # We can use any image we want as long as we can chown
-    image: ubuntu
-    # Need a user priviliged enough to chown
-    # user: "root"
-    # Specify the group in question
-    # group_add:
-    #   - '${GROUP_ID}'
-    volumes:
-      # The volume to chown
-      - fuseki-dev-backup:/tmp/change-ownership-fuseki-dev
-      - fuseki-live-backup:/tmp/change-ownership-fuseki-live
-    # execute chmod to enable writing to the volume by other containers
-    # write exit status to file
-    # only exit status of last command is used, but thats ok since either both or none should fail
-    # keep container running to enable abort-on-container-exit for testrunner container
-    # abort-on-container-exit is a prerequisite for using 
-    command: >
-      sh -c "(chmod -R 777 /tmp/change-ownership-fuseki-dev && chmod -R 777 /tmp/change-ownership-fuseki-live ; echo $? > /tmp/chmod_exit_status) ; tail -f /dev/null"
-    healthcheck:
-      test: ["CMD-SHELL", "cat /tmp/chmod_exit_status | grep -q '^0$'"]
-      interval: 5s
-      retries: 5
+    restart: no
 
   web:
     container_name: evokstest_testrunner
-    build:
-      context: "."
     command: >
       sh -c "set -e &&
              cd ./evoks &&
@@ -58,136 +15,24 @@ services:
              coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks &&
              coverage report &&
              coverage xml"
-    depends_on:
-      postgres:
-          condition: service_healthy
-      change-vol-ownership:
-          condition: service_healthy
-      fuseki-dev:
-          condition: service_healthy
-      fuseki-live:
-          condition: service_healthy
-      skosmos-dev:
-          condition: service_healthy
-      skosmos-live:
-          condition: service_healthy
-    networks: 
-      - postgres
-      - fuseki-dev
-      - fuseki-live
-    volumes:
-      - .:/code
-      - ./skosmos-dev/config.ttl:/code/skosmos-dev/config.ttl
-      - ./skosmos-live/config.ttl:/code/skosmos-live/config.ttl
-      - fuseki-dev-backup:/code/fuseki-dev/backup
-      - fuseki-live-backup:/code/fuseki-live/backup
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000 || exit 1"]
-      interval: 20s
-      timeout: 10s
-      retries: 5
-      start_period: 2m
+    restart: no
 
   fuseki-dev:
     container_name: evokstest_fuseki-dev
-    image: secoresearch/fuseki
-    hostname: fuseki-dev
     environment: 
       ADMIN_PASSWORD: 'fuseki_password'
-      ENABLE_DATA_WRITE: 'True'
-      ENABLE_UPDATE: 'True'
-      ENABLE_UPLOAD: 'True'
-    volumes: 
-      - fuseki-dev-data:/fuseki-base/databases
-      - fuseki-dev-config:/fuseki-base/configuration
-      - fuseki-dev-backup:/fuseki-base/backups
-    networks:
-      - fuseki-dev
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "-S", "http://localhost:3030/$/ping"]
-      interval: 20s
-      timeout: 10s
-      retries: 5
-      start_period: 2m
+    restart: no
       
   fuseki-live:
     container_name: evokstest_fuseki-live
-    image: secoresearch/fuseki
-    hostname: fuseki-live
     environment: 
       ADMIN_PASSWORD: 'fuseki_password'
-      ENABLE_DATA_WRITE: 'True'
-      ENABLE_UPDATE: 'True'
-      ENABLE_UPLOAD: 'True'
-    volumes: 
-      - fuseki-live-data:/fuseki-base/databases
-      - fuseki-live-config:/fuseki-base/configuration
-      - fuseki-live-backup:/fuseki-base/backups
-    networks:
-      - fuseki-live
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "-S", "http://localhost:3030/$/ping"]
-      interval: 20s
-      timeout: 10s
-      retries: 5
-      start_period: 2m
+    restart: no
 
   skosmos-dev:
     container_name: evokstest_skosmos-dev
-    build:
-      context: https://github.com/NatLibFi/Skosmos.git#v2.17
-      dockerfile: dockerfiles/Dockerfile.ubuntu
-    hostname: skosmos-dev
-    depends_on: 
-      - fuseki-dev
-    networks:
-      - fuseki-dev
-    volumes:
-      - ./skosmos-dev/config.ttl:/var/www/html/config.ttl
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
-      interval: 20s
-      timeout: 10s
-      retries: 5
-      start_period: 2m
+    restart: no
 
   skosmos-live:
     container_name: evokstest_skosmos-live
-    build:
-      context: https://github.com/NatLibFi/Skosmos.git#v2.17
-      dockerfile: dockerfiles/Dockerfile.ubuntu
-    hostname: skosmos-live
-    depends_on: 
-      - fuseki-live
-    networks:
-      - fuseki-live
-    volumes:
-      - ./skosmos-live/config.ttl:/var/www/html/config.ttl
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
-      interval: 20s
-      timeout: 10s
-      retries: 5
-      start_period: 2m
-
-networks:
-  postgres:
-    driver: bridge
-  fuseki-dev:
-    driver: bridge
-  fuseki-live:
-    driver: bridge
-volumes:
-    postgres:
-    fuseki:
-    fuseki-dev-data:
-    fuseki-dev-config:
-    fuseki-dev-backup:
-    fuseki-live-data:
-    fuseki-live-config:
-    fuseki-live-backup:
+    restart: no
