--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: postgres
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-insecure_changeme}
       PGDATA: /data/postgres
       POSTGRES_DB: dev
     volumes:
@@ -44,7 +44,7 @@ services:
     image: secoresearch/fuseki
     hostname: fuseki-dev
     environment: 
-      ADMIN_PASSWORD: ${FUSEKI_PASSWORD:-fuseki_password}
+      ADMIN_PASSWORD: ${FUSEKI_PASSWORD:-insecure_changeme}
       ENABLE_DATA_WRITE: 'True'
       ENABLE_UPDATE: 'True'
       ENABLE_UPLOAD: 'True'
@@ -59,7 +59,7 @@ services:
     image: secoresearch/fuseki
     hostname: fuseki-live
     environment: 
-      ADMIN_PASSWORD: ${FUSEKI_PASSWORD:-fuseki_password}
+      ADMIN_PASSWORD: ${FUSEKI_PASSWORD:-insecure_changeme}
       ENABLE_DATA_WRITE: 'True'
       ENABLE_UPDATE: 'True'
       ENABLE_UPLOAD: 'True'
