Add collected static file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@ media
 *.bak 
 
 evoks/theme/static_src/core
-evoks/theme/static
+evoks/theme/static/admin
+evoks/theme/static/guardian
+
 
 
 # If you are using PyCharm # 
