--- a/proxy/proxy.conf
+++ b/proxy/proxy.conf
@@ -3,17 +3,17 @@ server {
     listen [::]:80;
     server_name  localhost;
     absolute_redirect off;
-    location /app/ {
-        proxy_pass   http://web:8000/;
+    location / {
+        proxy_pass   http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # # Increase timeouts
-        # proxy_connect_timeout 300s;
-        # proxy_send_timeout 300s;
-        # proxy_read_timeout 300s;
+        # Increase timeouts because evoks is sometimes slow
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
 
         # # increase buffers / disable buffers
         # proxy_buffering off;
@@ -22,20 +22,20 @@ server {
         # proxy_busy_buffers_size 256k;
         # proxy_max_temp_file_size 0;
 
-        # # Handle large request bodies
-        # client_max_body_size 10M;
+        # Handle large request bodies
+        client_max_body_size 50M;
 
         # Ensure the trailing slash is preserved
-        # rewrite ^/app(/.*)$ $1 break;
+        rewrite ^/app(/.*)$ $1 break;
     }
 
     location /static/ {
         alias /app/static/;  # Assuming your static files are served from the static directory
     }
-    #is there a more elegant yet simple solution?
-    location = /favicon.ico { access_log off; 
-    log_not_found off; 
-    }
+    # # is there a more elegant yet simple solution?
+    # location = /favicon.ico { access_log off; 
+    # log_not_found off; 
+    #}
 
 
 }
