Edit evoks app location in reverse proxy
- evoks now under .../evoks
- add env vars for django settings

--- a/proxy/proxy.conf
+++ b/proxy/proxy.conf
@@ -3,8 +3,10 @@ server {
     listen [::]:80;
     server_name  localhost;
     absolute_redirect off;
-    location / {
-        proxy_pass   http://web:8000;
+
+    location /evoks/ {
+        proxy_pass   http://web:8000/;
+        proxy_redirect http://web:8000/ http://$host/evoks/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,8 +27,6 @@ server {
         # Handle large request bodies
         client_max_body_size 50M;
 
-        # Ensure the trailing slash is preserved
-        rewrite ^/app(/.*)$ $1 break;
     }
 
     location /static/ {
