--- a/.example.env
+++ b/.example.env
@@ -7,6 +7,8 @@ EVOKS_MAIL=
 FUSEKI_PASSWORD=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+# only if reverse proxy (nginx) is used
+FORCE_SCRIPT_NAME=/evoks
 # all following only needed for development:
 POSTGRES_PORT=
 FUSEKI_DEV_PORT=
