Ignore reverse-proxy in tests workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,7 @@ on:
       - master
       - main
       - development
+      - reverse-proxy
   pull_request:
     branches: [ master, main, development]
   workflow_dispatch:
