--- a/proxy/proxy.conf
+++ b/proxy/proxy.conf
@@ -27,15 +27,67 @@ server {
         # Handle large request bodies
         client_max_body_size 50M;
 
+        # static files of evoks
+        location /evoks/static/ {
+            include /etc/nginx/mime.types;
+            alias /app/evoks/static/;
+        }
+
     }
 
-    location /static/ {
-        alias /app/static/;  # Assuming your static files are served from the static directory
+
+    location /skosmos-dev/ {
+        proxy_pass   http://skosmos-dev:80/;
+        proxy_redirect http://skosmos-dev:80/ http://$host/skosmos-dev/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Increase timeouts because skosmos is sometimes slow
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
+        # Handle large request bodies
+        client_max_body_size 50M;
+
+        # static files of skosmos-dev
+        location /skosmos-dev/static/ {
+            include /etc/nginx/mime.types;
+            alias /app/skosmos-dev/static/;
+        }
+
     }
-    # # is there a more elegant yet simple solution?
-    # location = /favicon.ico { access_log off; 
-    # log_not_found off; 
-    #}
+
+
+    location /skosmos-live/ {
+        proxy_pass   http://skosmos-live:80/;
+        proxy_redirect http://skosmos-live:80/ http://$host/skosmos-live/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Increase timeouts because skosmos is sometimes slow
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
+        # Handle large request bodies
+        client_max_body_size 50M;
+
+        # static files of skosmos-live
+        location /skosmos-live/static/ {
+            include /etc/nginx/mime.types;
+            alias /app/skosmos-live/static/;
+        }
+
+    }
+
+
+
+
+
+
 
 
 }
