--- a/evoks/theme/static_src/package.json
+++ b/evoks/theme/static_src/package.json
@@ -7,10 +7,8 @@
     "build": "npm run build:clean && npm run build:tailwind",
     "build:clean": "rimraf ../static/css/dist",
     "build:tailwind": "cross-env NODE_ENV=production npx tailwindcss --postcss -i ./src/styles.css -o ../static/css/dist/styles.css --minify",
-    "sync": "browser-sync start --config bs.config.js",
     "dev:tailwind": "cross-env NODE_ENV=development npx tailwindcss --postcss -i ./src/styles.css -o ../static/css/dist/styles.css -w",
-    "dev:sync": "run-p dev:tailwind sync",
-    "dev": "nodemon -x \"npm run dev:sync\" -w tailwind.config.js -w postcss.config.js -w bs.config.js -e js"
+    "dev": "nodemon -x \"npm run dev:tailwind\" -w tailwind.config.js -w postcss.config.js -e js"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +19,6 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
-    "browser-sync": "^2.26.14",
     "clean-css-cli": "^5.2.2",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.7",
