Change default location of web app - Fixes errors in tests - Tests need default location of "/" for web app

--- a/proxy/proxy.conf
+++ b/proxy/proxy.conf
@@ -4,9 +4,9 @@ server {
     server_name  localhost;
     absolute_redirect off;
 
-    location /evoks/ {
+    location / {
         proxy_pass   http://web:8000/;
-        proxy_redirect http://web:8000/ http://$host/evoks/;
+        proxy_redirect http://web:8000/ http://$host/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -28,7 +28,7 @@ server {
         client_max_body_size 50M;
 
         # static files of evoks
-        location /evoks/static/ {
+        location /static/ {
             include /etc/nginx/mime.types;
             alias /app/evoks/static/;
         }
