Make evoks reverse-proxy location dynamic
- evoks location in proxy.conf is filled from .env file
- default is /
- added custom entrypoint for env var substitution in proxy.conf

--- a/.example.env
+++ b/.example.env
@@ -7,8 +7,8 @@ EVOKS_MAIL=
 FUSEKI_PASSWORD=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-# only if reverse proxy (nginx) is used
-FORCE_SCRIPT_NAME=/evoks
+# example evoks_url for reverse-proxy: /evoks
+EVOKS_URL=
 # all following only needed for development:
 POSTGRES_PORT=
 FUSEKI_DEV_PORT=
