--- a/proxy/proxy-template.conf
+++ b/proxy/proxy-template.conf
@@ -4,7 +4,7 @@ server {
     server_name  localhost;
     absolute_redirect off;
 
-    location / {
+    location ${EVOKS_URL}/ {
         proxy_pass   http://web:8000/;
         proxy_redirect http://web:8000/ http://$host/;
         proxy_set_header Host $host;
@@ -28,7 +28,7 @@ server {
         client_max_body_size 50M;
 
         # static files of evoks
-        location /static/ {
+        location ${EVOKS_URL}/static/ {
             include /etc/nginx/mime.types;
             alias /app/evoks/static/;
         }
