--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,2 +1,5 @@
 FROM nginx:1.13-alpine
-COPY proxy.conf /etc/nginx/conf.d/default.conf
+COPY proxy-template.conf /etc/nginx/conf.d/default.conf.template
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
