Restructure docker-compose
- Remove ports from .env and docker compose because reverse proxy is used
- Adjust evoks starting command for development mode
- Add proxy port to .env
- Add service_healthy check to proxy
- Adjust web service health check

--- a/.example.env
+++ b/.example.env
@@ -1,15 +1,16 @@
 INSTANCE_NAME=
-EVOKS_PORT=
-SKOSMOS_DEV_PORT=
-SKOSMOS_LIVE_PORT=
+PROXY_PORT=
 PUBLICURL=
 EVOKS_MAIL=
 FUSEKI_PASSWORD=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-# example evoks_url for reverse-proxy: /evoks
+# example EVOKS_URL for reverse-proxy: /evoks
 EVOKS_URL=
-# all following only needed for development:
+# all following only needed for development and or for running without proxy:
 POSTGRES_PORT=
 FUSEKI_DEV_PORT=
 FUSEKI_LIVE_PORT=
+EVOKS_PORT=
+SKOSMOS_DEV_PORT=
+SKOSMOS_LIVE_PORT=
