--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,6 +2,13 @@ services:
   postgres:
     ports:
       - "${POSTGRES_PORT:-8005}:5432"
+  web:
+    command: >
+      sh -c "python ./evoks/manage.py migrate && 
+             python ./evoks/manage.py runserver 0.0.0.0:8000"
+    entrypoint: []
+    # entrypoint: >
+    #   sh -c "python ./evoks/manage.py migrate && python ./evoks/manage.py collectstatic --noinput --verbosity 0 && gunicorn evoks.wsgi:application --bind 0.0.0.0:8000 --chdir evoks --log-level debug"
   fuseki-dev:
     ports:
       - "${FUSEKI_DEV_PORT:-8003}:3030"
