Put restart policy in docker compose custom test in strings
- some docker compose versions dont accept "no" without quotes

--- a/docker-compose.custom-test.yml
+++ b/docker-compose.custom-test.yml
@@ -4,7 +4,7 @@ services:
     environment:
       POSTGRES_USER: 'postgres'
       POSTGRES_PASSWORD: 'changeme'
-    restart: no
+    restart: "no"
 
   web:
     container_name: evokstest_testrunner
@@ -15,24 +15,47 @@ services:
              coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks &&
              coverage report &&
              coverage xml"
-    restart: no
+    restart: "no"
 
   fuseki-dev:
     container_name: evokstest_fuseki-dev
     environment: 
       ADMIN_PASSWORD: 'fuseki_password'
-    restart: no
+    restart: "no"
       
   fuseki-live:
     container_name: evokstest_fuseki-live
     environment: 
       ADMIN_PASSWORD: 'fuseki_password'
-    restart: no
+    restart: "no"
 
   skosmos-dev:
     container_name: evokstest_skosmos-dev
-    restart: no
+    restart: "no"
 
   skosmos-live:
     container_name: evokstest_skosmos-live
-    restart: no
+    restart: "no"
+
+
+services:
+  proxy:
+    container_name: evokstest_proxy
+    restart: "no"
+
+  postgres:
+    container_name: evokstest_postgres
+    restart: "no"
+
+  web:
+    container_name: evokstest_testrunner
+    entrypoint: >
+      sh -c "set -e &&
+             cd ./evoks &&
+             python manage.py migrate &&
+             coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks &&
+             coverage report &&
+             coverage xml"
+    restart: "no"
+
+ 
