Add env var for skosmos BaseHref URI
- BaseHref of Skosmos is needed for reverse proxies
- web service is perfoming the env var substitution

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,8 +62,15 @@ services:
     container_name: evoks_${INSTANCE_NAME:-defaultinstance}_web
     build:
       context: "."
+    environment:
+      - BASEHREF="${PUBLICURL:-http://localhost}:${PROXY_PORT:-9000}/skosmos-dev/"
     entrypoint: >
-      sh -c "python ./evoks/manage.py migrate && python ./evoks/manage.py collectstatic --noinput --verbosity 0 && gunicorn evoks.wsgi:application --bind 0.0.0.0:8000 --chdir evoks"
+      sh -c "export BASEHREF && 
+      envsubst '$$BASEHREF' < /code/skosmos-dev/config-template.ttl > /code/skosmos-dev/config.ttl && 
+      envsubst '$$BASEHREF' < /code/skosmos-live/config-template.ttl > /code/skosmos-live/config.ttl && 
+      python ./evoks/manage.py migrate && 
+      python ./evoks/manage.py collectstatic --noinput --verbosity 0 && 
+      gunicorn evoks.wsgi:application --bind 0.0.0.0:8000 --chdir evoks"
     depends_on:
       postgres:
           condition: service_healthy
@@ -84,6 +91,8 @@ services:
       - frontnet
     volumes:
       - .:/code
+      - ./skosmos-dev/config-template.ttl:/code/skosmos-dev/config-template.ttl
+      - ./skosmos-live/config-template.ttl:/code/skosmos-live/config-template.ttl
       - ./skosmos-dev/config.ttl:/code/skosmos-dev/config.ttl
       - ./skosmos-live/config.ttl:/code/skosmos-live/config.ttl
       - fuseki-dev-backup:/code/fuseki-dev/backup
@@ -149,15 +158,21 @@ services:
       dockerfile: dockerfiles/Dockerfile.ubuntu
     # to change port here, use .env file
     hostname: skosmos-dev
+    # environment:
+    #   - BASEHREF="${PUBLICURL:-http://localhost}:${PROXY_PORT:-9000}/skosmos-dev/"
     depends_on: 
       - fuseki-dev
     networks:
       - fuseki-dev
       - frontnet
     volumes:
-      - ./skosmos-dev/config.ttl:/var/www/html/config.ttl
+      # - ./skosmos-dev/config-template.ttl:/var/www/html/config-template.ttl
       - static-skosmos-dev:/var/www/html/resource
     restart: unless-stopped
+    # command: >
+    #   /bin/bash -c "export BASEHREF &&
+    #   envsubst '$$BASEHREF' < /var/www/html/config-template.ttl > /var/www/html/config.ttl && cat /var/www/html/config.ttl &&
+    #   /usr/sbin/apache2ctl -D FOREGROUND"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
       interval: 20s
@@ -171,15 +186,21 @@ services:
       context: https://github.com/NatLibFi/Skosmos.git#v2.17
       dockerfile: dockerfiles/Dockerfile.ubuntu
     hostname: skosmos-live
+    environment:
+      - BASEHREF="${PUBLICURL:-http://localhost}:${PROXY_PORT:-9000}/skosmos-live/"
     depends_on: 
       - fuseki-live
     networks:
       - fuseki-live
       - frontnet
     volumes:
-      - ./skosmos-live/config.ttl:/var/www/html/config.ttl
+      - ./skosmos-live/config-template.ttl:/var/www/html/config-template.ttl
       - static-skosmos-live:/var/www/html/resource
     restart: unless-stopped
+    command: >
+      /bin/bash -c "export BASEHREF &&
+      envsubst '$$BASEHREF' < /var/www/html/config-template.ttl > /var/www/html/config.ttl &&
+      /usr/sbin/apache2ctl -D FOREGROUND"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
       interval: 20s
