--- a/docker-compose.custom-test.yml
+++ b/docker-compose.custom-test.yml
@@ -1,44 +1,4 @@
 services:
-  postgres:
-    container_name: evokstest_postgres
-    environment:
-      POSTGRES_USER: 'postgres'
-      POSTGRES_PASSWORD: 'changeme'
-    restart: "no"
-
-  web:
-    container_name: evokstest_testrunner
-    command: >
-      sh -c "set -e &&
-             cd ./evoks &&
-             python manage.py migrate &&
-             coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks &&
-             coverage report &&
-             coverage xml"
-    restart: "no"
-
-  fuseki-dev:
-    container_name: evokstest_fuseki-dev
-    environment: 
-      ADMIN_PASSWORD: 'fuseki_password'
-    restart: "no"
-      
-  fuseki-live:
-    container_name: evokstest_fuseki-live
-    environment: 
-      ADMIN_PASSWORD: 'fuseki_password'
-    restart: "no"
-
-  skosmos-dev:
-    container_name: evokstest_skosmos-dev
-    restart: "no"
-
-  skosmos-live:
-    container_name: evokstest_skosmos-live
-    restart: "no"
-
-
-services:
   proxy:
     container_name: evokstest_proxy
     restart: "no"
@@ -51,6 +11,9 @@ services:
     container_name: evokstest_testrunner
     entrypoint: >
       sh -c "set -e &&
+             export BASEHREF && 
+             envsubst '$$BASEHREF' < /code/skosmos-dev/config-template.ttl > /code/skosmos-dev/config.ttl && 
+             envsubst '$$BASEHREF' < /code/skosmos-live/config-template.ttl > /code/skosmos-live/config.ttl && 
              cd ./evoks &&
              python manage.py migrate &&
              coverage run manage.py test -v 3 tests/model/ tests/migration/ tests/skosmos/ tests/fuseki/ tests/views/ tests/evoks &&
@@ -58,4 +21,18 @@ services:
              coverage xml"
     restart: "no"
 
- 
+  fuseki-dev:
+    container_name: evokstest_fuseki-dev
+    restart: "no"
+      
+  fuseki-live:
+    container_name: evokstest_fuseki-live
+    restart: "no"
+
+  skosmos-dev:
+    container_name: evokstest_skosmos-dev
+    restart: "no"
+
+  skosmos-live:
+    container_name: evokstest_skosmos-live
+    restart: "no"
