Fix BASEHREF handling in Docker Compose
- envsubst would overwrite existing skosmos config on every startup
- basehref now written to config.ttl with bash script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,7 +153,7 @@ services:
       dockerfile: dockerfiles/Dockerfile.ubuntu
     hostname: skosmos-dev
     environment:
-      - BASEHREFDEV="http://${PUBLICURL:-localhost}:${PROXY_PORT:-9000}/skosmos-dev/"
+      - BASEHREFDEV=http://${PUBLICURL:-localhost}:${PROXY_PORT:-9000}/skosmos-dev/
     depends_on: 
       - fuseki-dev
     networks:
@@ -162,11 +162,12 @@ services:
     volumes:
       - ./skosmos-dev/config-template.ttl:/var/www/html/config-template.ttl
       - ./skosmos-dev/config.ttl:/var/www/html/config.ttl
+      - ./helperscripts/replace-basehref.sh:/home/replace-basehref.sh
       - static-skosmos-dev:/var/www/html/resource
     restart: unless-stopped
     command: >
       /bin/bash -c "export BASEHREFDEV &&
-      envsubst '$$BASEHREFDEV' < /var/www/html/config-template.ttl > /var/www/html/config.ttl &&
+      /home/replace-basehref.sh /var/www/html/config.ttl $$BASEHREFDEV &&
       /usr/sbin/apache2ctl -D FOREGROUND"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
@@ -182,7 +183,7 @@ services:
       dockerfile: dockerfiles/Dockerfile.ubuntu
     hostname: skosmos-live
     environment:
-      - BASEHREFLIVE="http://${PUBLICURL:-localhost}:${PROXY_PORT:-9000}/skosmos-live/"
+      - BASEHREFLIVE=http://${PUBLICURL:-localhost}:${PROXY_PORT:-9000}/skosmos-live/
     depends_on: 
       - fuseki-live
     networks:
@@ -191,11 +192,12 @@ services:
     volumes:
       - ./skosmos-live/config-template.ttl:/var/www/html/config-template.ttl
       - ./skosmos-live/config.ttl:/var/www/html/config.ttl
+      - ./helperscripts/replace-basehref.sh:/home/replace-basehref.sh
       - static-skosmos-live:/var/www/html/resource
     restart: unless-stopped
     command: >
       /bin/bash -c "export BASEHREFLIVE &&
-      envsubst '$$BASEHREFLIVE' < /var/www/html/config-template.ttl > /var/www/html/config.ttl &&
+      /home/replace-basehref.sh /var/www/html/config.ttl $$BASEHREFLIVE &&
       /usr/sbin/apache2ctl -D FOREGROUND"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:80 || exit 1"]
