Add DJANGO_SECRET_KEY as env var and update README to reflect these changes

--- a/.example.env
+++ b/.example.env
@@ -7,6 +7,8 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 # example EVOKS_URL for reverse-proxy: /evoks
 EVOKS_URL=
+# generate a secret key using e.g. https://djecrety.ir/ and put it in double quotes (keep it secret in production mode!))
+DJANGO_SECRET_KEY=
 # all following only needed for development and or for running without proxy:
 POSTGRES_PORT=
 FUSEKI_DEV_PORT=
