Remove unneccesary keep alive of service
- change-ownership does not have to stay alive
- has to stay alive for tests because otherwise "--exit-code-from" option will fail

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,6 +9,12 @@ services:
     container_name: evokstest_postgres
     restart: "no"
 
+  change-vol-ownership:
+    container_name: evokstest_change-vol-ownership
+    command: >
+      sh -c "(chmod -R 777 /tmp/change-ownership-fuseki-dev && chmod -R 777 /tmp/change-ownership-fuseki-live ; echo $? > /tmp/chmod_exit_status) ; tail -f /dev/null"
+    restart: "no"
+
   web:
     container_name: evokstest_testrunner
     entrypoint: >
