--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,14 +14,7 @@ on:
 
 jobs:
   test-all:
-    runs-on: ubuntu-latest
-
-    services:
-      dockerdind:
-        image: docker:20.10.7
-        options: --privileged
-        ports:
-          - 2375:2375
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -31,6 +24,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build and run tests
+        shell: bash
         run: |
           docker compose -f docker-compose.yml -f docker-compose.test.yml build
           docker compose -f docker-compose.yml -f docker-compose.test.yml up --abort-on-container-exit --exit-code-from web
@@ -43,5 +37,6 @@ jobs:
 
       - name: Remove Docker containers
         if: always()
-        run: docker compose -f docker-compose.yml -f docker-compose.test.yml down
-
+        shell: bash
+        run: |
+          docker compose -f docker-compose.yml -f docker-compose.test.yml down
